// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
.c1 {
  font-size: 8px;
  line-height: 9px;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 1px solid;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  resize: both;
  cursor: not-allowed;
  opacity: 0.5;
}

@media (min-width:768px) {
  .c1 {
    font-size: 10px;
    line-height: 11px;
  }
}

<div
  class="c0"
  direction="column"
>
  <label
    class="c1"
    color="grey5"
    cursor="inherit"
  >
    Textarea label
  </label>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c2"
      disabled=""
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
</div>
`;

exports[`renders 1`] = `
.c1 {
  font-size: 8px;
  line-height: 9px;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 1px solid;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  resize: both;
  cursor: pointer;
  opacity: 1;
}

@media (min-width:768px) {
  .c1 {
    font-size: 10px;
    line-height: 11px;
  }
}

<div
  class="c0 Textarea"
  direction="column"
>
  <label
    class="c1"
    color="grey5"
    cursor="inherit"
  >
    Textarea label
  </label>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c2"
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
</div>
`;

exports[`renders with error 1`] = `
.c1 {
  font-size: 8px;
  line-height: 9px;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  line-height: 20px;
  background: #ffffff;
  border: 1px solid;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  resize: both;
  cursor: pointer;
  opacity: 1;
}

.c3 {
  margin-top: 7px;
  font-size: 12px;
}

@media (min-width:768px) {
  .c1 {
    font-size: 10px;
    line-height: 11px;
  }
}

<div
  class="c0"
  direction="column"
>
  <label
    class="c1"
    color="grey5"
    cursor="inherit"
  >
    Textarea label
  </label>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c2"
      id="textarea_id"
      placeholder="Placeholder text!"
    />
  </div>
  <span
    class="c3"
  >
    Something really quite terrible has gone wrong here!
  </span>
</div>
`;
